<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardVw"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.fragments.RegistroFragment">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/imageRegistro"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:src="@drawable/registro"
            app:tint="#656565"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtTxtNombre"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginEnd="7.5dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/nombre"
                android:inputType="text" />

            <EditText
                android:id="@+id/edtTxtApellido"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="7.5dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/apellido"
                android:inputType="text" />
        </LinearLayout>

        <EditText
            android:id="@+id/edtTxtEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/ingrese_su_e_mail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edtTxtPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/ingrese_un_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnReg"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/registrar"
            android:textSize="18sp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>